Repackaging in preparation for 2.0 release